添加机器统计页面

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -60,6 +60,34 @@
     <string name="statistic_off">关</string>
     <string name="statistic_yes">是</string>
     <string name="statistic_no">否</string>
+    <string name="statistic_absolute_counter">Absolut Counter:</string>
+    <string name="statistic_total_water_quantity">总用水量:</string>
+    <string name="statistic_total_water_products">饮品总用水量:</string>
+    <string name="statistic_total_water_rinse">冲水总用水量:</string>
+    <string name="statistic_total_water_cleaning">洗机总用水量:</string>
+    <string name="statistic_total_coffee_bean_quantity">咖啡豆总用量:</string>
+    <string name="statistic_total_coffee_beans_rear">后豆缸总用量:</string>
+    <string name="statistic_total_coffee_beans_front">前豆缸总用量:</string>
+    <string name="statistic_total_coffee_powder_chute">咖啡粉总用量:</string>
+    <string name="statistic_cleaning_counter">清洗计数:</string>
+    <string name="statistic_time_hot_water">热水总用时:</string>
+    <string name="statistic_time_steam_left">左蒸汽棒总用时:</string>
+    <string name="statistic_time_steam_right">右蒸汽棒总用时:</string>
+    <string name="statistic_time_steam_boiler_purge">清洗锅炉时长:</string>
+    <string name="statistic_brew_cycles_left">左研磨器圈数:</string>
+    <string name="statistic_brew_cycles_right">右研磨器圈数:</string>
+    <string name="statistic_cycles_rinse_left">Cycles Rinse Left:</string>
+    <string name="statistic_cycles_rinse_right">Cycles Rinse Right:</string>
+    <string name="statistic_milk_cycles_left">Milk Cycles Left:</string>
+    <string name="statistic_milk_cycles_right">Milk Cycles Right:</string>
+    <string name="statistic_time_milk">Time Milk:</string>
+    <string name="statistic_heating_time_boiler_left">左锅炉加热时长:</string>
+    <string name="statistic_heating_time_boiler_right">右锅炉加热时长:</string>
+    <string name="statistic_heat_time_steam_boiler_1">蒸汽锅炉1加热时长:</string>
+    <string name="statistic_heat_time_steam_boiler_2">蒸汽锅炉2加热时长:</string>
+    <string name="statistic_time_air_pump">空气泵时长:</string>
+    <string name="statistic_time_milk_steam_left">左蒸汽奶棒时长:</string>
+    <string name="statistic_time_milk_steam_right">右蒸汽奶棒时长:</string>
 
     <string name="home_login_input_empty">用户名或密码未输入</string>
     <string name="home_login_input_invalid">用户名或密码长度不符</string>
