--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,7 @@
     <string name="home_item_coffee">coffee</string>
     <string name="home_item_americano">Americano</string>
     <string name="home_item_auto_foam">auto foam</string>
+    <string name="home_item_steam">Steam</string>
     <string name="home_item_double_espresso">double espresso</string>
     <string name="home_item_double_coffee">double coffee</string>
     <string name="home_item_double_americano">double Americano</string>
