--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -119,6 +119,9 @@
     <string name="home_right_boiler_temperature">右边锅炉温度: %d°C</string>
     <string name="home_steam_boiler_temperature">蒸汽锅炉温度: %d°C</string>
     <string name="home_steam_boiler_pressure">蒸汽锅炉压力: %dbar</string>
+    <string name="home_process_status_brewing">正在研磨</string>
+    <string name="home_process_status_brew_completed">研磨完成</string>
+    <string name="home_process_status_finished">制作完成</string>
 
     <string name="permission_password_correct">密码正确</string>
     <string name="permission_password_error">密码错误</string>
