--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,13 +39,13 @@
     <string name="statistic_product_top_product_type">Product Type</string>
     <string name="statistic_product_top_cups">Cups</string>
     <string name="statistic_product_top_operator">Operate Account</string>
-    <string name="statistic_product_coffee_counter">Coffee Counter</string>
-    <string name="statistic_product_hotwater_counter">HotWater Counter</string>
-    <string name="statistic_product_milk_counter">Milk Counter</string>
-    <string name="statistic_product_foam_counter">Foam Counter</string>
-    <string name="statistic_product_steam_counter">Steam Counter</string>
-    <string name="statistic_product_total_counter">Total Counter</string>
-    <string name="statistic_product_single_counter">Single Counter</string>
+    <string name="statistic_product_coffee_counter">Coffee Counter:</string>
+    <string name="statistic_product_hotwater_counter">HotWater Counter:</string>
+    <string name="statistic_product_milk_counter">Milk Counter:</string>
+    <string name="statistic_product_foam_counter">Foam Counter:</string>
+    <string name="statistic_product_steam_counter">Steam Counter:</string>
+    <string name="statistic_product_total_counter">Total Counter:</string>
+    <string name="statistic_product_single_counter">Single Counter:</string>
     <string name="statistic_error_top_event">Event</string>
     <string name="statistic_error_top_code">Code</string>
     <string name="statistic_wash_top_start">Started</string>
