修改制作命令处理逻辑，详见changelog

--- a/serialport/changelog.txt
+++ b/serialport/changelog.txt
@@ -1,8 +1,17 @@
 2024/06/28
 1. 对齐底层PullBufInfo数据是指帧数据中，结果字段。修改所有响应处理逻辑
+
 2024/07/26
 1. 修改制作产品数据实体结构，从ProductInfo修改为ProductProfile。
 2. 提供返回字段id映射表，对应具体结果。
 3. 明确每个下发命令的指令字段是对应的，send指令多少，reply指令会对应多少。
+
 2024/07/30
 1. 明确pullBuf返回饮品制作数据为ID2个字节+ProductId2个字节
+
+2024/08/22
+1. 修改制作命令下发逻辑，去除原等待下发命令响应。
+逻辑流程：
+1）下发命令时停止pull，
+2）IO板接收到制作命令会混合返回正在制作命令以及心跳数据，但是制作命令可能存在背心跳数据冲刷情况，需要留意是否存在风险。
+3）应用层应该接收到两种数据，各自响应自身逻辑。如超时未接收到制作命令，提示异常人工介入（后续再补充该部分逻辑）。
