调整饮品制作页饮品item UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,21 +108,31 @@
     <string name="home_login_password">password</string>
     <string name="home_login_confirm">login</string>
     <string name="home_lock_clean_count_tip">Unlock screen before countdown ends</string>
-    <string name="home_item_stop">stop</string>
-    <string name="home_item_hot_water">hot water</string>
-    <string name="home_item_foam">foam</string>
-    <string name="home_item_rinse">rinse</string>
-    <string name="home_item_espresso">espresso</string>
-    <string name="home_item_coffee">coffee</string>
+    <string name="home_item_stop">Stop</string>
+    <string name="home_item_hot_water">Hot Water</string>
+    <string name="home_item_foam">Foam</string>
+    <string name="home_item_rinse">Rinse</string>
+    <string name="home_item_espresso">Espresso</string>
+    <string name="home_item_coffee">Coffee</string>
     <string name="home_item_americano">Americano</string>
-    <string name="home_item_auto_foam">auto foam</string>
+    <string name="home_item_auto_foam">Auto Foam</string>
     <string name="home_item_steam">Steam</string>
-    <string name="home_item_double_espresso">double espresso</string>
-    <string name="home_item_double_coffee">double coffee</string>
-    <string name="home_item_double_americano">double Americano</string>
-    <string name="home_item_manual_foam">manual foam</string>
+    <string name="home_item_milk">Milk</string>
+    <string name="home_item_pod_coffee">Pod Coffee</string>
+    <string name="home_item_double_espresso">2x Espresso</string>
+    <string name="home_item_double_coffee">2x Coffee</string>
+    <string name="home_item_double_americano">2x Americano</string>
+    <string name="home_item_manual_foam">Manual Foam</string>
     <string name="home_item_cappuccino">Cappuccino</string>
+    <string name="home_item_double_cappuccino">2x Cappuccino</string>
     <string name="home_item_latte">Latte</string>
+    <string name="home_item_double_latte">2x Latte</string>
+    <string name="home_item_macchiato">Macchiato</string>
+    <string name="home_item_double_macchiato">2x Macchiato</string>
+    <string name="home_item_latte_macchiato">Latte Macchiato</string>
+    <string name="home_item_double_latte_macchiato">2x Latte Macchiato</string>
+    <string name="home_item_es_macchiato">Espresso Macch.</string>
+    <string name="home_item_double_es_macchiato">2x Espresso Macch.</string>
     <string name="home_left_boiler_temperature">Left Boiler Temperature: %d°C</string>
     <string name="home_right_boiler_temperature">Right Boiler Temperature: %d°C</string>
     <string name="home_steam_boiler_temperature">Steam Boiler Temperature: %d°C</string>
