--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -118,12 +118,22 @@
     <string name="home_item_americano">美式咖啡</string>
     <string name="home_item_auto_foam">自动奶泡</string>
     <string name="home_item_steam">蒸汽</string>
-    <string name="home_item_double_espresso">双份意式咖啡</string>
-    <string name="home_item_double_coffee">双份咖啡</string>
-    <string name="home_item_double_americano">双份美式咖啡</string>
+    <string name="home_item_milk">牛奶</string>
+    <string name="home_item_pod_coffee">咖啡壶</string>
+    <string name="home_item_double_espresso">2x 意式咖啡</string>
+    <string name="home_item_double_coffee">2x 咖啡</string>
+    <string name="home_item_double_americano">2x 美式咖啡</string>
     <string name="home_item_manual_foam">手动奶泡</string>
     <string name="home_item_cappuccino">卡布奇诺</string>
+    <string name="home_item_double_cappuccino">2x 卡布奇诺</string>
     <string name="home_item_latte">拿铁</string>
+    <string name="home_item_double_latte">2x 拿铁</string>
+    <string name="home_item_macchiato">玛奇朵</string>
+    <string name="home_item_double_macchiato">2x 玛奇朵</string>
+    <string name="home_item_latte_macchiato">拿铁玛奇朵</string>
+    <string name="home_item_es_macchiato">浓缩玛奇朵</string>
+    <string name="home_item_double_es_macchiato">2x 浓缩玛奇朵</string>
+    <string name="home_item_double_latte_macchiato">2x 拿铁玛奇朵</string>
     <string name="home_left_boiler_temperature">左边锅炉温度: %d°C</string>
     <string name="home_right_boiler_temperature">右边锅炉温度: %d°C</string>
     <string name="home_steam_boiler_temperature">蒸汽锅炉温度: %d°C</string>
