--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -22,6 +22,7 @@
     <string name="first_install_date_title">日期设置</string>
     <string name="first_install_select_date">选择日期</string>
     <string name="first_install_time_title">时间设置</string>
+    <string name="first_install_select_time">选择时间</string>
 
     <string name="statistic_product_history">产品统计</string>
     <string name="statistic_machine_service_history">维修历史</string>
