--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="first_install_date_title">Date Settings</string>
     <string name="first_install_select_date">Select Date</string>
     <string name="first_install_time_title">Time Settings</string>
+    <string name="first_install_select_time">Select Time</string>
 
     <string name="statistic_product_history">Product History</string>
     <string name="statistic_machine_service_history">Service History</string>
