--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,6 +149,11 @@
     <string name="home_entrance_info_service_company">Service Company</string>
     <string name="home_entrance_info_machine_id">Telemetry Machine ID</string>
     <string name="home_entrance_enter_standby">Confirm to enter standby mode?</string>
+    <string name="home_self_check_in_progress">SelfCheck In Progress…</string>
+    <string name="home_self_check_time_description">This process may take several minutes</string>
+    <string name="home_release_steam_description">Air in steam boiler has to be released.</string>
+    <string name="home_release_steam_attention">ATTENTION</string>
+    <string name="home_release_steam_activated">Steam will be activated!</string>
 
     <string name="permission_password_correct">password correct</string>
     <string name="permission_password_error">password error</string>
