--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -138,9 +138,9 @@
     <string name="home_item_es_macchiato">浓缩玛奇朵</string>
     <string name="home_item_double_es_macchiato">2x 浓缩玛奇朵</string>
     <string name="home_item_double_latte_macchiato">2x 拿铁玛奇朵</string>
-    <string name="home_left_boiler_temperature">左边锅炉温度: %d°C</string>
-    <string name="home_right_boiler_temperature">右边锅炉温度: %d°C</string>
-    <string name="home_steam_boiler_temperature">蒸汽锅炉温度: %d°C</string>
+    <string name="home_left_boiler_temperature">左边锅炉: %d°C</string>
+    <string name="home_right_boiler_temperature">右边锅炉: %d°C</string>
+    <string name="home_steam_boiler_temperature">蒸汽锅炉: %d°C</string>
     <string name="home_steam_boiler_pressure">蒸汽锅炉压力: %dbar</string>
     <string name="home_process_status_brewing">正在研磨</string>
     <string name="home_process_status_brew_completed">研磨完成</string>
