--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -152,6 +152,10 @@
     <string name="home_entrance_enter_standby">确认进入待机模式？</string>
     <string name="home_self_check_in_progress">设备自检中…</string>
     <string name="home_self_check_time_description">这个过程可能需要几分钟</string>
+    <string name="home_self_check_rinse_first_text">请点击</string>
+    <string name="home_self_check_rinse_second_text">冲水</string>
+    <string name="home_self_check_rinse_third_text">按钮</string>
+    <string name="home_self_check_boiler_heating">咖啡锅炉加热中…</string>
     <string name="home_release_steam_description">蒸汽锅炉蒸汽需要释放。</string>
     <string name="home_release_steam_attention">注意</string>
     <string name="home_release_steam_activated">蒸汽将被释放！</string>
