--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -160,6 +160,7 @@
     <string name="home_release_steam_description">蒸汽锅炉蒸汽需要释放。</string>
     <string name="home_release_steam_attention">注意</string>
     <string name="home_release_steam_activated">蒸汽将被释放！</string>
+    <string name="home_release_steam_wait">蒸汽正在释放，请稍后…</string>
 
     <string name="permission_password_correct">密码正确</string>
     <string name="permission_password_error">密码错误</string>
