--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">coffee</string>
 
+    <string name="global_warning_title">WARNING</string>
+
     <string name="common_button_confirm">OK</string>
     <string name="common_button_cancel">Cancel</string>
     <string name="common_statistic">Statistic</string>
