--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name">coffee</string>
 
     <string name="global_warning_title">警告</string>
+    <string name="global_warning_follow_instruction">请根据说明书进行常规保养。</string>
 
     <string name="common_button_confirm">确认</string>
     <string name="common_button_cancel">取消</string>
