--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -27,6 +27,10 @@
     <string name="first_install_time_title">时间设置</string>
     <string name="first_install_select_time">选择时间</string>
 
+    <string name="statistic_layout_title">统计 / 历史数据</string>
+    <string name="statistic_day_counter">每日统计</string>
+    <string name="statistic_period_counter">周期统计</string>
+    <string name="statistic_total_counter">总量统计</string>
     <string name="statistic_product_history">产品统计</string>
     <string name="statistic_machine_service_history">维修历史</string>
     <string name="statistic_clean_history">洗机历史</string>
