--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,10 @@
     <string name="first_install_time_title">Time Settings</string>
     <string name="first_install_select_time">Select Time</string>
 
+    <string name="statistic_layout_title">Statistics / Historical Data</string>
+    <string name="statistic_day_counter">Day Counter</string>
+    <string name="statistic_period_counter">Period Counter</string>
+    <string name="statistic_total_counter">Total Counter</string>
     <string name="statistic_product_history">Product History</string>
     <string name="statistic_machine_service_history">Service History</string>
     <string name="statistic_clean_history">Clean History</string>
