--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -7,15 +7,15 @@
 
     <string name="common_button_confirm">确认</string>
     <string name="common_button_cancel">取消</string>
-    <string name="common_statistic">统计数据</string>
-    <string name="common_formula">配方管理</string>
-    <string name="common_display">显示设置</string>
-    <string name="common_machine_config">机器设置</string>
-    <string name="common_machine_params">机器参数</string>
-    <string name="common_vat_and_grind">豆缸&amp;磨刀</string>
+    <string name="common_statistic">统计/历史数据</string>
+    <string name="common_formula">产品及按键</string>
+    <string name="common_display">显示</string>
+    <string name="common_machine_config">机器工程设置</string>
+    <string name="common_machine_params">机器运营设置</string>
+    <string name="common_beans_and_grinder">豆缸&amp;磨刀</string>
     <string name="common_machine_clean">洗机</string>
     <string name="common_permission">权限管理</string>
-    <string name="common_maintenance">保养记录</string>
+    <string name="common_maintenance">维修保养</string>
     <string name="common_serial_test">串口测试</string>
 
     <string name="first_install_language_title">语言设置</string>
