--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -184,6 +184,8 @@
     <string name="permission_hint_password">密码</string>
     <string name="permission_hint_remark">备注</string>
 
+    <string name="formula_title">产品 / 按键</string>
+    <string name="formula_assimilation_key">同化键</string>
     <string name="formula_product_type">产品类型</string>
     <string name="formula_product_name">产品名称</string>
     <string name="formula_vat_position">豆缸</string>
