--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,6 +185,8 @@
 
     <string name="formula_title">Products and Keyboard</string>
     <string name="formula_assimilation_key">Assimilation Key</string>
+    <string name="formula_product_test">Product Test</string>
+    <string name="formula_learn_quantity">Learn Quantity</string>
     <string name="formula_product_type">Product Type</string>
     <string name="formula_product_name">Product Name</string>
     <string name="formula_vat_position">Vat Position</string>
