添加配方页底部机器值

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,6 +202,8 @@
     <string name="formula_bypass_dosage">Bypass Dosage</string>
     <string name="formula_font_vat">Font</string>
     <string name="formula_back_vat">Back</string>
+    <string name="formula_steam_wand">Steam Wand:</string>
+    <string name="formula_steam_boiler">Steam Boiler:</string>
 
 
 </resources>
