--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -18,6 +18,31 @@
     <string name="common_maintenance">维修保养</string>
     <string name="common_serial_test">串口测试</string>
 
+    <string name="error_no_resource">异常</string>
+    <string name="error_serial_read_fail">串口读取失败</string>
+    <string name="error_max_read_retry">串口读取重试失败</string>
+    <string name="error_max_open_retry">串口打开重试失败</string>
+    <string name="error_serial_io_exception">串口异常</string>
+    <string name="error_serial_format_invalid">串口数据格式异常</string>
+    <string name="error_crc_check_failed">串口数据校验失败</string>
+    <string name="error_read_no_data">串口无数据</string>
+    <string name="error_heart_beat_miss">串口心跳超时</string>
+    <string name="error_frame_size_error">数据大小异常</string>
+    <string name="error_serial_no_reply">串口无响应</string>
+    <string name="error_command_no_reply">命令无响应</string>
+
+    <string name="error_front_bean_container_empty">前豆仓空</string>
+    <string name="error_back_bean_container_empty">后豆仓空</string>
+    <string name="error_bean_container_empty">豆仓空</string>
+    <string name="error_left_grinder_error">左研磨器异常</string>
+    <string name="error_right_grinder_error">右研磨器异常</string>
+    <string name="error_left_boiler_error">左咖啡锅炉异常</string>
+    <string name="error_right_boiler_error">右咖啡锅炉异常</string>
+    <string name="error_left_brewer_error">左萃取器异常</string>
+    <string name="error_right_brewer_error">右萃取器异常</string>
+    <string name="error_steam_boiler_error">蒸汽锅炉异常</string>
+    <string name="error_no_water">缺水</string>
+
     <string name="first_install_language_title">语言设置</string>
     <string name="first_install_language_Chinese_simplified">中文(简体)</string>
     <string name="first_install_language_English">English</string>
