--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -196,6 +196,9 @@
 
     <string name="settings_title">机器设置</string>
 
+    <string name="permission_title_login">登录</string>
+    <string name="permission_enter_username">输入账号</string>
+    <string name="permission_enter_password">输入密码</string>
     <string name="permission_password_correct">密码正确</string>
     <string name="permission_password_error">密码错误</string>
     <string name="permission_login_user">登录</string>
