--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -202,6 +202,11 @@
     <string name="permission_main_title">账号管理</string>
     <string name="permission_main_register_account">注册</string>
     <string name="permission_main_account_manage">账号管理</string>
+    <string name="permission_main_username_title">用户名</string>
+    <string name="permission_main_password_title">密码</string>
+    <string name="permission_main_remarks_title">备注</string>
+    <string name="permission_main_role_title">角色</string>
+    <string name="permission_main_jurisdiction_title">权限</string>
     <string name="permission_password_correct">密码正确</string>
     <string name="permission_password_error">密码错误</string>
     <string name="permission_login_user">登录</string>
