--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -207,6 +207,9 @@
     <string name="permission_main_remarks_title">备注</string>
     <string name="permission_main_role_title">角色</string>
     <string name="permission_main_jurisdiction_title">权限</string>
+    <string name="permission_edit_register_success">注册成功</string>
+    <string name="permission_edit_register_failed">注册失败</string>
+
     <string name="permission_password_correct">密码正确</string>
     <string name="permission_password_error">密码错误</string>
     <string name="permission_login_user">登录</string>
