添加用户账号管理页面；添加列表页跳转用户账号信息管理逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,6 +208,10 @@
     <string name="permission_main_jurisdiction_title">Jurisdiction</string>
     <string name="permission_edit_register_success">Register Success</string>
     <string name="permission_edit_register_failed">Register Failed</string>
+    <string name="permission_user_list_title">User List</string>
+    <string name="permission_user_list_operate_title">Operation</string>
+    <string name="permission_user_list_operate_modify">Modify</string>
+    <string name="permission_user_list_operate_delete">Delete</string>
 
     <string name="permission_password_correct">password correct</string>
     <string name="permission_password_error">password error</string>
