--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -209,6 +209,10 @@
     <string name="permission_main_jurisdiction_title">权限</string>
     <string name="permission_edit_register_success">注册成功</string>
     <string name="permission_edit_register_failed">注册失败</string>
+    <string name="permission_user_list_title">用户列表</string>
+    <string name="permission_user_list_operate_title">操作</string>
+    <string name="permission_user_list_operate_modify">修改</string>
+    <string name="permission_user_list_operate_delete">删除</string>
 
     <string name="permission_password_correct">密码正确</string>
     <string name="permission_password_error">密码错误</string>
