--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -241,6 +241,8 @@
     <string name="formula_second_press_weight">Second Press Weight</string>
     <string name="formula_hot_water_dosage">Hot Water Dosage</string>
     <string name="formula_americano_seq">Americano Seq.</string>
+    <string name="formula_americano_seq_c_w">first coffee then water</string>
+    <string name="formula_americano_seq_w_c">first water then coffee</string>
     <string name="formula_coffee_cycles">Coffee Cycles</string>
     <string name="formula_bypass_dosage">Bypass Dosage</string>
     <string name="formula_font_vat">Font</string>
