--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -14,7 +14,7 @@
     <string name="common_machine_params">机器运营设置</string>
     <string name="common_beans_and_grinder">豆缸&amp;磨刀</string>
     <string name="common_machine_clean">洗机</string>
-    <string name="common_permission">权限管理</string>
+    <string name="common_password">密码管理</string>
     <string name="common_maintenance">维修保养</string>
     <string name="common_serial_test">串口测试</string>
 
@@ -213,6 +213,11 @@
     <string name="permission_user_list_operate_title">操作</string>
     <string name="permission_user_list_operate_modify">修改</string>
     <string name="permission_user_list_operate_delete">删除</string>
+    <string name="permission_password_title">密码管理</string>
+    <string name="permission_change_psw_title">修改密码</string>"
+    <string name="permission_enter_password_again">再次输入密码</string>
+    <string name="permission_valid_empty">不可为空</string>
+    <string name="permission_valid_not_same">两次输入不一致</string>
 
     <string name="permission_password_correct">密码正确</string>
     <string name="permission_password_error">密码错误</string>
@@ -220,9 +225,9 @@
     <string name="permission_update_user">更新用户</string>
     <string name="permission_insert_user">注册用户</string>
     <string name="permission_delete_user">删除账号</string>
-    <string name="permission_role_employee">店员</string>
-    <string name="permission_role_manager">管理员</string>
-    <string name="permission_role_support">售后支持</string>
+    <string name="permission_role_operator">店员</string>
+    <string name="permission_role_manager">经理</string>
+    <string name="permission_role_technician">技术支持</string>
     <string name="permission_hint_username">用户名</string>
     <string name="permission_hint_password">密码</string>
     <string name="permission_hint_remark">备注</string>
