新增首页进入后台页面输入密码校验逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,6 +137,7 @@
     <string name="home_clean_screen">Lock and Clean</string>
     <string name="home_machine_info">Machine Info</string>
     <string name="home_standby_mode">StandBy Mode</string>
+    <string name="home_login_title">Password</string>
     <string name="home_login_input_empty">Username or Password empty</string>
     <string name="home_login_input_invalid">Username or Password length not match</string>
     <string name="home_login_authenticate_fail">verification failed</string>
