--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -141,6 +141,7 @@
     <string name="home_clean_screen">锁屏擦拭</string>
     <string name="home_machine_info">机器信息</string>
     <string name="home_standby_mode">待机模式</string>
+    <string name="home_login_title">密码</string>
     <string name="home_login_username">用户名</string>
     <string name="home_login_password">密码</string>
     <string name="home_login_confirm">登录</string>
